# crvecdb

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: bench.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  UPGRADE_PLAN.md
examples/: sift1m_bench.rs
src/: config.rs  error.rs  index.rs  lib.rs
src/distance/: mod.rs  scalar.rs  simd.rs
src/hnsw/: graph.rs  mod.rs  search.rs
src/storage/: layout.rs  memory.rs  mmap.rs  mod.rs
tests/: concurrent.rs
