[package]
name = "crvecdb"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Fast vector database with HNSW indexing for ARM64 and x86-64"
keywords = ["vector", "database", "hnsw", "similarity", "search"]
categories = ["algorithms", "data-structures", "database"]
repository = "https://github.com/svvs/crvecdb"
readme = "README.md"

[features]
default = ["simd", "parallel"]
simd = ["simdeez"]
parallel = ["rayon"]

[dependencies]
# SIMD abstraction (cross-platform: ARM NEON + x86 SSE/AVX2)
simdeez = { version = "2.0", optional = true }

# Memory-mapped files
memmap2 = "0.9"

# Parallelism
rayon = { version = "1.10", optional = true }

# Random number generation (for layer selection)
rand = "0.8"

# Ordered floats for heap operations
ordered-float = "4.2"

# Parking lot for faster RwLock
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bench]]
name = "bench"
harness = false
